[package]
name = "mailgang"
version = "0.2.1"
authors = ["Michael Hertsens <michael28072000@outlook.com>"]
description = "Crate that I use to abstract away the smtp(email-related stuff)."
edition = "2018"
license = "MIT OR Apache-2.0"
repository="https://github.com/mich2000/mailgang.git"

[dependencies]
dotenv = "0.15.0"
log = "0.4.0"
regex = "1"
sparkpost = "0.5.4"